--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -5,8 +5,6 @@
 		"worldtravel": "World Travel",
 		"map": "Map",
 		"users": "Users",
-		"login": "Login",
-		"signup": "Signup",
 		"search": "Search",
 		"profile": "Profile",
 		"greeting": "Hi",
@@ -87,11 +85,45 @@
 		"updated": "Updated",
 		"name": "Name",
 		"date": "Date",
+		"activity_types": "Activity Types",
+		"date_constrain": "Constrain to collection dates",
 		"rating": "Rating",
+		"my_images": "My Images",
+		"add_an_activity": "Add an activity",
+		"no_images": "No Images",
+		"upload_images_here": "Upload images here",
+		"share_adventure": "Share this Adventure!",
+		"copy_link": "Copy Link",
+		"image": "Image",
+		"upload_image": "Upload Image",
+		"url": "URL",
+		"fetch_image": "Fetch Image",
+		"wikipedia": "Wikipedia",
+		"add_notes": "Add notes",
+		"warning": "Warning",
+		"add": "Add",
+		"save_next": "Save & Next",
+		"end_date": "End Date",
+		"my_visits": "My Visits",
+		"start_date": "Start Date",
+		"remove": "Remove",
+		"location": "Location",
+		"search_for_location": "Search for a location",
+		"clear_map": "Clear map",
+		"search_results": "Searh results",
+		"no_results": "No results found",
+		"wiki_desc": "Pulls excerpt from Wikipedia article matching the name of the adventure.",
+		"generate_desc": "Generate Description",
+		"public_adventure": "Public Adventure",
+		"location_information": "Location Information",
+		"link": "Link",
+		"description": "Description",
 		"sources": "Sources",
 		"collection_adventures": "Include Collection Adventures",
 		"filter": "Filter",
 		"category_filter": "Category Filter",
+		"category": "Category",
+		"select_adventure_category": "Select Adventure Category",
 		"clear": "Clear",
 		"my_collections": "My Collections",
 		"open_filters": "Open Filters",
@@ -123,6 +155,19 @@
 		"dates": "Dates",
 		"wiki_image_error": "Error fetching image from Wikipedia",
 		"start_before_end_error": "Start date must be before end date",
+		"activity": "Activity",
+		"actions": "Actions",
+		"see_adventures": "See Adventures",
+		"image_fetch_failed": "Failed to fetch image",
+		"no_location": "Please enter a location",
+		"no_start_date": "Please enter a start date",
+		"no_description_found": "No description found",
+		"adventure_created": "Adventure created",
+		"adventure_create_error": "Failed to create adventure",
+		"adventure_updated": "Adventure updated",
+		"adventure_update_error": "Failed to update adventure",
+		"new_adventure": "New Adventure",
+		"basic_information": "Basic Information",
 		"activities": {
 			"general": "General 🌍",
 			"outdoor": "Outdoor 🏞️",
@@ -165,6 +210,31 @@
 		"forgot_password": "Forgot Password?",
 		"signup": "Signup",
 		"login_error": "Unable to login with the provided credentials.",
-		"login": "Login"
+		"login": "Login",
+		"email": "Email",
+		"first_name": "First Name",
+		"last_name": "Last Name",
+		"confirm_password": "Confirm Password",
+		"registration_disabled": "Registration is currently disabled.",
+		"profile_picture": "Profile Picture",
+		"public_profile": "Public Profile",
+		"public_tooltip": "With a public profile, users can share collections with you and view your profile on the users page."
+	},
+	"users": {
+		"no_users_found": "No users found with public profiles."
+	},
+	"settings": {
+		"update_error": "Error updating settings",
+		"update_success": "Settings updated successfully!",
+		"settings_page": "Settings Page",
+		"account_settings": "User Account Settings",
+		"update": "Update",
+		"password_change": "Change Password",
+		"new_password": "New Password",
+		"confirm_new_password": "Confirm New Password",
+		"email_change": "Change Email",
+		"current_email": "Current Email",
+		"no_email_set": "No email set",
+		"new_email": "New Email"
 	}
 }
