--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -5,8 +5,6 @@
     "worldtravel": "Viajar por el Mundo",
     "map": "Mapa",
     "users": "Usuarios",
-    "login": "Iniciar Sesión",
-    "signup": "Registrarse",
     "search": "Buscar",
     "profile": "Perfil",
     "greeting": "Hola",
@@ -146,7 +144,54 @@
     "image_upload_success": "¡Imagen cargada exitosamente!",
     "no_image_url": "No se encontró ninguna imagen en esa URL.",
     "start_before_end_error": "La fecha de inicio debe ser anterior a la fecha de finalización.",
-    "wiki_image_error": "Error al obtener la imagen de Wikipedia"
+    "wiki_image_error": "Error al obtener la imagen de Wikipedia",
+    "actions": "Comportamiento",
+    "activity": "Actividad",
+    "see_adventures": "Ver Aventuras",
+    "activity_types": "Tipos de actividad",
+    "add": "Agregar",
+    "add_notes": "Agregar notas",
+    "adventure_create_error": "No se pudo crear la aventura",
+    "adventure_created": "Aventura creada",
+    "adventure_update_error": "No se pudo actualizar la aventura",
+    "adventure_updated": "Aventura actualizada",
+    "basic_information": "Información básica",
+    "category": "Categoría",
+    "clear_map": "Borrar mapa",
+    "copy_link": "Copiar enlace",
+    "date_constrain": "Restringir a las fechas de recolección",
+    "description": "Descripción",
+    "end_date": "Fecha de finalización",
+    "fetch_image": "Obtener imagen",
+    "generate_desc": "Generar descripción",
+    "image": "Imagen",
+    "image_fetch_failed": "No se pudo recuperar la imagen",
+    "link": "Enlace",
+    "location": "Ubicación",
+    "location_information": "Información de ubicación",
+    "my_images": "Mis imágenes",
+    "my_visits": "Mis visitas",
+    "new_adventure": "Nueva aventura",
+    "no_description_found": "No se encontró ninguna descripción",
+    "no_images": "Sin imágenes",
+    "no_location": "Por favor ingresa una ubicación",
+    "no_results": "No se encontraron resultados",
+    "no_start_date": "Por favor ingrese una fecha de inicio",
+    "public_adventure": "Aventura pública",
+    "remove": "Eliminar",
+    "save_next": "Ahorrar",
+    "search_for_location": "Buscar una ubicación",
+    "search_results": "Resultados de búsqueda",
+    "select_adventure_category": "Seleccionar categoría de aventura",
+    "share_adventure": "¡Comparte esta aventura!",
+    "start_date": "Fecha de inicio",
+    "upload_image": "Subir imagen",
+    "upload_images_here": "Sube imágenes aquí",
+    "url": "URL",
+    "warning": "Advertencia",
+    "wiki_desc": "Extrae un extracto de un artículo de Wikipedia que coincide con el nombre de la aventura.",
+    "wikipedia": "Wikipedia",
+    "add_an_activity": "Agregar una actividad"
   },
   "worldtravel": {
     "all": "Todo",
@@ -165,6 +210,31 @@
     "login_error": "No se puede iniciar sesión con las credenciales proporcionadas.",
     "password": "Contraseña",
     "signup": "Inscribirse",
-    "username": "Nombre de usuario"
+    "username": "Nombre de usuario",
+    "confirm_password": "confirmar Contraseña",
+    "email": "Correo electrónico",
+    "first_name": "Nombre de pila",
+    "last_name": "Apellido",
+    "registration_disabled": "El registro está actualmente deshabilitado.",
+    "profile_picture": "Foto de perfil",
+    "public_profile": "Perfil público",
+    "public_tooltip": "Con un perfil público, los usuarios pueden compartir colecciones con usted y ver su perfil en la página de usuarios."
+  },
+  "users": {
+    "no_users_found": "No se encontraron usuarios con perfiles públicos."
+  },
+  "settings": {
+    "account_settings": "Configuración de cuenta de usuario",
+    "confirm_new_password": "Confirmar nueva contraseña",
+    "current_email": "Correo electrónico actual",
+    "email_change": "Cambiar correo electrónico",
+    "new_email": "Nuevo correo electrónico",
+    "new_password": "Nueva contraseña",
+    "no_email_set": "No hay correo electrónico configurado",
+    "password_change": "Cambiar la contraseña",
+    "settings_page": "Página de configuración",
+    "update": "Actualizar",
+    "update_error": "Error al actualizar la configuración",
+    "update_success": "¡La configuración se actualizó correctamente!"
   }
 }
