--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -87,7 +87,69 @@
     "unarchived_collection_message": "Raccolta annullata con successo!",
     "updated": "Aggiornato",
     "visit": "Visita",
-    "visits": "Visite"
+    "visits": "Visite",
+    "adventure_delete_success": "Avventura eliminata con successo!",
+    "collection_adventures": "Includi avventure di raccolta",
+    "collection_link_success": "Avventura collegata alla raccolta con successo!",
+    "dates": "Date",
+    "delete_adventure": "Elimina avventura",
+    "duration": "Durata",
+    "image_removed_error": "Errore durante la rimozione dell'immagine",
+    "image_removed_success": "Immagine rimossa con successo!",
+    "image_upload_error": "Errore durante il caricamento dell'immagine",
+    "image_upload_success": "Immagine caricata con successo!",
+    "no_image_url": "Nessuna immagine trovata a quell'URL.",
+    "planned": "Pianificato",
+    "start_before_end_error": "La data di inizio deve essere antecedente alla data di fine",
+    "visited": "Visitato",
+    "actions": "Azioni",
+    "activity": "Attività",
+    "activity_types": "Tipi di attività",
+    "add": "Aggiungere",
+    "add_an_activity": "Aggiungi un'attività",
+    "add_notes": "Aggiungi note",
+    "adventure_create_error": "Impossibile creare l'avventura",
+    "adventure_created": "Avventura creata",
+    "adventure_update_error": "Impossibile aggiornare l'avventura",
+    "adventure_updated": "Avventura aggiornata",
+    "basic_information": "Informazioni di base",
+    "category": "Categoria",
+    "clear_map": "Mappa chiara",
+    "copy_link": "Copia collegamento",
+    "date_constrain": "Vincolare alle date di raccolta",
+    "description": "Descrizione",
+    "end_date": "Data di fine",
+    "fetch_image": "Recupera immagine",
+    "generate_desc": "Genera descrizione",
+    "image": "Immagine",
+    "image_fetch_failed": "Impossibile recuperare l'immagine",
+    "link": "Collegamento",
+    "location": "Posizione",
+    "location_information": "Informazioni sulla posizione",
+    "my_images": "Le mie immagini",
+    "my_visits": "Le mie visite",
+    "new_adventure": "Nuova avventura",
+    "no_description_found": "Nessuna descrizione trovata",
+    "no_images": "Nessuna immagine",
+    "no_location": "Inserisci una località",
+    "no_results": "Nessun risultato trovato",
+    "no_start_date": "Inserisci una data di inizio",
+    "public_adventure": "Avventura pubblica",
+    "remove": "Rimuovere",
+    "save_next": "Salva",
+    "search_for_location": "Cerca una posizione",
+    "search_results": "Risultati della ricerca",
+    "see_adventures": "Vedi Avventure",
+    "select_adventure_category": "Seleziona la categoria Avventura",
+    "share_adventure": "Condividi questa avventura!",
+    "start_date": "Data di inizio",
+    "upload_image": "Carica immagine",
+    "upload_images_here": "Carica le immagini qui",
+    "url": "URL",
+    "warning": "Avvertimento",
+    "wiki_desc": "Estrae un estratto dall'articolo di Wikipedia corrispondente al nome dell'avventura.",
+    "wiki_image_error": "Errore durante il recupero dell'immagine da Wikipedia",
+    "wikipedia": "Wikipedia"
   },
   "home": {
     "desc_1": "Scopri, pianifica ed esplora con facilità",
@@ -110,7 +172,6 @@
     "discord": "Discordia",
     "documentation": "Documentazione",
     "greeting": "CIAO",
-    "login": "Login",
     "logout": "Esci",
     "map": "Mappa",
     "my_activities": "Le mie attività",
@@ -119,7 +180,6 @@
     "search": "Ricerca",
     "settings": "Impostazioni",
     "shared_with_me": "Condiviso con me",
-    "signup": "Iscrizione",
     "theme_selection": "Selezione del tema",
     "themes": {
       "aestetic-dark": "Oscuro estetico",
@@ -132,5 +192,49 @@
     },
     "users": "Utenti",
     "worldtravel": "Viaggio nel mondo"
+  },
+  "auth": {
+    "confirm_password": "Conferma password",
+    "email": "E-mail",
+    "first_name": "Nome di battesimo",
+    "forgot_password": "Ha dimenticato la password?",
+    "last_name": "Cognome",
+    "login": "Login",
+    "login_error": "Impossibile accedere con le credenziali fornite.",
+    "password": "Password",
+    "registration_disabled": "La registrazione è attualmente disabilitata.",
+    "signup": "Iscrizione",
+    "username": "Nome utente",
+    "profile_picture": "Immagine del profilo",
+    "public_profile": "Profilo pubblico",
+    "public_tooltip": "Con un profilo pubblico, gli utenti possono condividere raccolte con te e visualizzare il tuo profilo nella pagina degli utenti."
+  },
+  "users": {
+    "no_users_found": "Nessun utente trovato con profili pubblici."
+  },
+  "worldtravel": {
+    "all": "Tutto",
+    "all_subregions": "Tutte le sottoregioni",
+    "clear_search": "Cancella ricerca",
+    "completely_visited": "Completamente visitato",
+    "country_list": "Elenco dei paesi",
+    "no_countries_found": "Nessun paese trovato",
+    "not_visited": "Non visitato",
+    "num_countries": "paesi trovati",
+    "partially_visited": "Parzialmente visitato"
+  },
+  "settings": {
+    "account_settings": "Impostazioni dell'account utente",
+    "confirm_new_password": "Conferma nuova password",
+    "current_email": "E-mail corrente",
+    "email_change": "Cambia e-mail",
+    "new_email": "Nuova e-mail",
+    "new_password": "Nuova parola d'ordine",
+    "no_email_set": "Nessuna e-mail impostata",
+    "password_change": "Cambiare la password",
+    "settings_page": "Pagina Impostazioni",
+    "update": "Aggiornamento",
+    "update_error": "Errore durante l'aggiornamento delle impostazioni",
+    "update_success": "Impostazioni aggiornate con successo!"
   }
 }
