--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -1,136 +1,240 @@
 {
-	"about": {
-		"about": "Over",
-		"close": "Dichtbij",
-		"license": "Gelicentieerd onder de GPL-3.0-licentie.",
-		"message": "Gemaakt met ❤️ in de Verenigde Staten.",
-		"nominatim_1": "Locatie zoeken en geocodering wordt verzorgd door",
-		"nominatim_2": "Hun gegevens zijn in licentie gegeven onder de ODbL-licentie.",
-		"oss_attributions": "Open source-attributies",
-		"other_attributions": "Aanvullende toeschrijvingen zijn te vinden in het README-bestand.",
-		"source_code": "Broncode"
-	},
-	"adventures": {
-		"activities": {
-			"activity": "Activiteit 🏄",
-			"art_museums": "Kunst",
-			"attraction": "Attractie 🎢",
-			"culture": "Cultuur 🎭",
-			"dining": "Dineren 🍽️",
-			"event": "Evenement 🎉",
-			"festivals": "Festivals 🎪",
-			"fitness": "Fitness🏋️",
-			"general": "Algemeen 🌍",
-			"hiking": "Wandelen 🥾",
-			"historical_sites": "Historische locaties 🏛️",
-			"lodging": "Accommodatie 🛌",
-			"music_concerts": "Muziek",
-			"nightlife": "Nachtleven 🌃",
-			"other": "Ander",
-			"outdoor": "Buiten 🏞️",
-			"shopping": "Winkelen 🛍️",
-			"spiritual_journeys": "Spirituele reizen 🧘‍♀️",
-			"transportation": "Vervoer 🚗",
-			"volunteer_work": "Vrijwilligerswerk 🤝",
-			"water_sports": "Watersport 🚤",
-			"wildlife": "Dieren in het wild 🦒"
-		},
-		"add_to_collection": "Toevoegen aan collectie",
-		"adventure": "Avontuur",
-		"adventure_delete_confirm": "Weet je zeker dat je dit avontuur wilt verwijderen? \nDeze actie kan niet ongedaan worden gemaakt.",
-		"adventure_details": "Avontuurdetails",
-		"adventure_type": "Avontuurtype",
-		"archive": "Archief",
-		"archived": "Gearchiveerd",
-		"archived_collection_message": "Collectie succesvol gearchiveerd!",
-		"archived_collections": "Gearchiveerde collecties",
-		"ascending": "Oplopend",
-		"cancel": "Annuleren",
-		"category_filter": "Categoriefilter",
-		"clear": "Duidelijk",
-		"close_filters": "Sluit Filters",
-		"collection": "Verzameling",
-		"collection_adventures": "Inclusief collectie-avonturen",
-		"collection_link_error": "Fout bij het koppelen van avontuur aan collectie",
-		"collection_link_success": "Avontuur succesvol gekoppeld aan collectie!",
-		"collection_remove_error": "Fout bij verwijderen van avontuur uit verzameling",
-		"collection_remove_success": "Avontuur is succesvol uit de collectie verwijderd!",
-		"count_txt": "resultaten die overeenkomen met uw zoekopdracht",
-		"create_new": "Maak nieuwe...",
-		"date": "Datum",
-		"delete": "Verwijderen",
-		"delete_collection": "Verzameling verwijderen",
-		"delete_collection_success": "Collectie succesvol verwijderd!",
-		"delete_collection_warning": "Weet u zeker dat u deze verzameling wilt verwijderen? \nHiermee worden ook alle gekoppelde avonturen verwijderd. \nDeze actie kan niet ongedaan worden gemaakt.",
-		"descending": "Aflopend",
-		"edit_adventure": "Avontuur bewerken",
-		"edit_collection": "Verzameling bewerken",
-		"filter": "Filter",
-		"homepage": "Startpagina",
-		"latitude": "Breedte",
-		"longitude": "Lengte",
-		"my_collections": "Mijn collecties",
-		"name": "Naam",
-		"no_image_found": "Geen afbeelding gevonden",
-		"not_found": "Avontuur niet gevonden",
-		"not_found_desc": "Het avontuur waar je naar op zoek was, kon niet gevonden worden. \nProbeer een ander avontuur of kom later nog eens terug.",
-		"open_details": "Details openen",
-		"open_filters": "Filters openen",
-		"order_by": "Bestel per",
-		"order_direction": "Bestelrichting",
-		"private": "Privé",
-		"public": "Openbaar",
-		"rating": "Beoordeling",
-		"remove_from_collection": "Verwijderen uit collectie",
-		"share": "Deel",
-		"sort": "Soort",
-		"sources": "Bronnen",
-		"unarchive": "Uit het archief halen",
-		"unarchived_collection_message": "Collectie is succesvol gedearchiveerd!",
-		"updated": "Bijgewerkt",
-		"visit": "Bezoek",
-		"visits": "Bezoeken"
-	},
-	"home": {
-		"desc_1": "Ontdek, plan en verken met gemak",
-		"desc_2": "AdventureLog is ontworpen om uw reis te vereenvoudigen en u de tools en middelen te bieden om uw volgende onvergetelijke avontuur te plannen, in te pakken en te navigeren.",
-		"feature_1": "Reislogboek",
-		"feature_1_desc": "Houd uw avonturen bij met een persoonlijk reislogboek en deel uw ervaringen met vrienden en familie.",
-		"feature_2": "Reisplanning",
-		"feature_2_desc": "Maak eenvoudig aangepaste reisroutes en krijg een overzicht van uw reis van dag tot dag.",
-		"feature_3": "Reiskaart",
-		"feature_3_desc": "Bekijk uw reizen over de hele wereld met een interactieve kaart en ontdek nieuwe bestemmingen.",
-		"go_to": "Ga naar AdventureLog",
-		"hero_2": "Ontdek en plan je volgende avontuur met AdventureLog. \nOntdek adembenemende bestemmingen, maak aangepaste reisroutes en blijf onderweg verbonden."
-	},
-	"navbar": {
-		"about": "Over AdventureLog",
-		"adventures": "Avonturen",
-		"collections": "Collecties",
-		"discord": "Meningsverschil",
-		"documentation": "Documentatie",
-		"greeting": "Hoi",
-		"login": "Login",
-		"logout": "Uitloggen",
-		"map": "Kaart",
-		"my_activities": "Mijn activiteiten",
-		"my_adventures": "Mijn avonturen",
-		"profile": "Profiel",
-		"search": "Zoekopdracht",
-		"settings": "Instellingen",
-		"shared_with_me": "Gedeeld met mij",
-		"signup": "Aanmelden",
-		"theme_selection": "Thema Selectie",
-		"themes": {
-			"aestetic-dark": "Esthetisch donker",
-			"aestetic-light": "Esthetisch licht",
-			"aqua": "Aqua",
-			"dark": "Donker",
-			"forest": "Woud",
-			"light": "Licht",
-			"night": "Nacht"
-		},
-		"users": "Gebruikers",
-		"worldtravel": "Wereldreizen"
-	}
+  "about": {
+    "about": "Over",
+    "close": "Dichtbij",
+    "license": "Gelicentieerd onder de GPL-3.0-licentie.",
+    "message": "Gemaakt met ❤️ in de Verenigde Staten.",
+    "nominatim_1": "Locatie zoeken en geocodering wordt verzorgd door",
+    "nominatim_2": "Hun gegevens zijn in licentie gegeven onder de ODbL-licentie.",
+    "oss_attributions": "Open source-attributies",
+    "other_attributions": "Aanvullende toeschrijvingen zijn te vinden in het README-bestand.",
+    "source_code": "Broncode"
+  },
+  "adventures": {
+    "activities": {
+      "activity": "Activiteit 🏄",
+      "art_museums": "Kunst",
+      "attraction": "Attractie 🎢",
+      "culture": "Cultuur 🎭",
+      "dining": "Dineren 🍽️",
+      "event": "Evenement 🎉",
+      "festivals": "Festivals 🎪",
+      "fitness": "Fitness🏋️",
+      "general": "Algemeen 🌍",
+      "hiking": "Wandelen 🥾",
+      "historical_sites": "Historische locaties 🏛️",
+      "lodging": "Accommodatie 🛌",
+      "music_concerts": "Muziek",
+      "nightlife": "Nachtleven 🌃",
+      "other": "Ander",
+      "outdoor": "Buiten 🏞️",
+      "shopping": "Winkelen 🛍️",
+      "spiritual_journeys": "Spirituele reizen 🧘‍♀️",
+      "transportation": "Vervoer 🚗",
+      "volunteer_work": "Vrijwilligerswerk 🤝",
+      "water_sports": "Watersport 🚤",
+      "wildlife": "Dieren in het wild 🦒"
+    },
+    "add_to_collection": "Toevoegen aan collectie",
+    "adventure": "Avontuur",
+    "adventure_delete_confirm": "Weet je zeker dat je dit avontuur wilt verwijderen? \nDeze actie kan niet ongedaan worden gemaakt.",
+    "adventure_details": "Avontuurdetails",
+    "adventure_type": "Avontuurtype",
+    "archive": "Archief",
+    "archived": "Gearchiveerd",
+    "archived_collection_message": "Collectie succesvol gearchiveerd!",
+    "archived_collections": "Gearchiveerde collecties",
+    "ascending": "Oplopend",
+    "cancel": "Annuleren",
+    "category_filter": "Categoriefilter",
+    "clear": "Duidelijk",
+    "close_filters": "Sluit Filters",
+    "collection": "Verzameling",
+    "collection_adventures": "Inclusief collectie-avonturen",
+    "collection_link_error": "Fout bij het koppelen van avontuur aan collectie",
+    "collection_link_success": "Avontuur succesvol gekoppeld aan collectie!",
+    "collection_remove_error": "Fout bij verwijderen van avontuur uit verzameling",
+    "collection_remove_success": "Avontuur is succesvol uit de collectie verwijderd!",
+    "count_txt": "resultaten die overeenkomen met uw zoekopdracht",
+    "create_new": "Maak nieuwe...",
+    "date": "Datum",
+    "delete": "Verwijderen",
+    "delete_collection": "Verzameling verwijderen",
+    "delete_collection_success": "Collectie succesvol verwijderd!",
+    "delete_collection_warning": "Weet u zeker dat u deze verzameling wilt verwijderen? \nHiermee worden ook alle gekoppelde avonturen verwijderd. \nDeze actie kan niet ongedaan worden gemaakt.",
+    "descending": "Aflopend",
+    "edit_adventure": "Avontuur bewerken",
+    "edit_collection": "Verzameling bewerken",
+    "filter": "Filter",
+    "homepage": "Startpagina",
+    "latitude": "Breedte",
+    "longitude": "Lengte",
+    "my_collections": "Mijn collecties",
+    "name": "Naam",
+    "no_image_found": "Geen afbeelding gevonden",
+    "not_found": "Avontuur niet gevonden",
+    "not_found_desc": "Het avontuur waar je naar op zoek was, kon niet gevonden worden. \nProbeer een ander avontuur of kom later nog eens terug.",
+    "open_details": "Details openen",
+    "open_filters": "Filters openen",
+    "order_by": "Bestel per",
+    "order_direction": "Bestelrichting",
+    "private": "Privé",
+    "public": "Openbaar",
+    "rating": "Beoordeling",
+    "remove_from_collection": "Verwijderen uit collectie",
+    "share": "Deel",
+    "sort": "Soort",
+    "sources": "Bronnen",
+    "unarchive": "Uit het archief halen",
+    "unarchived_collection_message": "Collectie is succesvol gedearchiveerd!",
+    "updated": "Bijgewerkt",
+    "visit": "Bezoek",
+    "visits": "Bezoeken",
+    "adventure_delete_success": "Avontuur succesvol verwijderd!",
+    "dates": "Datums",
+    "delete_adventure": "Avontuur verwijderen",
+    "duration": "Duur",
+    "image_removed_error": "Fout bij verwijderen van afbeelding",
+    "image_removed_success": "Afbeelding succesvol verwijderd!",
+    "image_upload_error": "Fout bij het uploaden van afbeelding",
+    "image_upload_success": "Afbeelding succesvol geüpload!",
+    "no_image_url": "Er is geen afbeelding gevonden op die URL.",
+    "planned": "Gepland",
+    "start_before_end_error": "De startdatum moet vóór de einddatum liggen",
+    "visited": "Bezocht",
+    "wiki_image_error": "Fout bij het ophalen van afbeelding van Wikipedia",
+    "actions": "Acties",
+    "activity": "Activiteit",
+    "activity_types": "Activiteitstypen",
+    "add": "Toevoegen",
+    "add_an_activity": "Voeg een activiteit toe",
+    "add_notes": "Voeg notities toe",
+    "adventure_create_error": "Kan geen avontuur creëren",
+    "adventure_created": "Avontuur gecreëerd",
+    "adventure_update_error": "Kan avontuur niet updaten",
+    "adventure_updated": "Avontuur bijgewerkt",
+    "basic_information": "Basisinformatie",
+    "category": "Categorie",
+    "clear_map": "Duidelijke kaart",
+    "copy_link": "Kopieer link",
+    "date_constrain": "Beperk u tot ophaaldata",
+    "description": "Beschrijving",
+    "end_date": "Einddatum",
+    "fetch_image": "Afbeelding ophalen",
+    "generate_desc": "Beschrijving genereren",
+    "image": "Afbeelding",
+    "image_fetch_failed": "Kan afbeelding niet ophalen",
+    "link": "Link",
+    "location": "Locatie",
+    "location_information": "Locatie-informatie",
+    "my_images": "Mijn afbeeldingen",
+    "my_visits": "Mijn bezoeken",
+    "new_adventure": "Nieuw avontuur",
+    "no_description_found": "Geen beschrijving gevonden",
+    "no_images": "Geen afbeeldingen",
+    "no_location": "Voer een locatie in",
+    "no_results": "Geen resultaten gevonden",
+    "no_start_date": "Voer een startdatum in",
+    "public_adventure": "Openbaar avontuur",
+    "remove": "Verwijderen",
+    "save_next": "Redden",
+    "search_for_location": "Zoek een locatie",
+    "search_results": "Zoekresultaten",
+    "see_adventures": "Zie Avonturen",
+    "select_adventure_category": "Selecteer Avontuurcategorie",
+    "share_adventure": "Deel dit avontuur!",
+    "start_date": "Startdatum",
+    "upload_image": "Afbeelding uploaden",
+    "upload_images_here": "Upload hier afbeeldingen",
+    "url": "URL",
+    "warning": "Waarschuwing",
+    "wiki_desc": "Haalt een fragment uit een Wikipedia-artikel dat overeenkomt met de naam van het avontuur.",
+    "wikipedia": "Wikipedia"
+  },
+  "home": {
+    "desc_1": "Ontdek, plan en verken met gemak",
+    "desc_2": "AdventureLog is ontworpen om uw reis te vereenvoudigen en u de tools en middelen te bieden om uw volgende onvergetelijke avontuur te plannen, in te pakken en te navigeren.",
+    "feature_1": "Reislogboek",
+    "feature_1_desc": "Houd uw avonturen bij met een persoonlijk reislogboek en deel uw ervaringen met vrienden en familie.",
+    "feature_2": "Reisplanning",
+    "feature_2_desc": "Maak eenvoudig aangepaste reisroutes en krijg een overzicht van uw reis van dag tot dag.",
+    "feature_3": "Reiskaart",
+    "feature_3_desc": "Bekijk uw reizen over de hele wereld met een interactieve kaart en ontdek nieuwe bestemmingen.",
+    "go_to": "Ga naar AdventureLog",
+    "hero_2": "Ontdek en plan je volgende avontuur met AdventureLog. \nOntdek adembenemende bestemmingen, maak aangepaste reisroutes en blijf onderweg verbonden.",
+    "hero_1": "Ontdek 's werelds meest opwindende avonturen",
+    "key_features": "Belangrijkste kenmerken"
+  },
+  "navbar": {
+    "about": "Over AdventureLog",
+    "adventures": "Avonturen",
+    "collections": "Collecties",
+    "discord": "Meningsverschil",
+    "documentation": "Documentatie",
+    "greeting": "Hoi",
+    "logout": "Uitloggen",
+    "map": "Kaart",
+    "my_activities": "Mijn activiteiten",
+    "my_adventures": "Mijn avonturen",
+    "profile": "Profiel",
+    "search": "Zoekopdracht",
+    "settings": "Instellingen",
+    "shared_with_me": "Gedeeld met mij",
+    "theme_selection": "Thema Selectie",
+    "themes": {
+      "aestetic-dark": "Esthetisch donker",
+      "aestetic-light": "Esthetisch licht",
+      "aqua": "Aqua",
+      "dark": "Donker",
+      "forest": "Woud",
+      "light": "Licht",
+      "night": "Nacht"
+    },
+    "users": "Gebruikers",
+    "worldtravel": "Wereldreizen"
+  },
+  "auth": {
+    "confirm_password": "Bevestig wachtwoord",
+    "email": "E-mail",
+    "first_name": "Voornaam",
+    "forgot_password": "Wachtwoord vergeten?",
+    "last_name": "Achternaam",
+    "login": "Login",
+    "login_error": "Kan niet inloggen met de opgegeven inloggegevens.",
+    "password": "Wachtwoord",
+    "registration_disabled": "Registratie is momenteel uitgeschakeld.",
+    "signup": "Aanmelden",
+    "username": "Gebruikersnaam",
+    "profile_picture": "Profielfoto",
+    "public_profile": "Openbaar profiel",
+    "public_tooltip": "Met een openbaar profiel kunnen gebruikers collecties met u delen en uw profiel bekijken op de gebruikerspagina."
+  },
+  "users": {
+    "no_users_found": "Er zijn geen gebruikers gevonden met openbare profielen."
+  },
+  "worldtravel": {
+    "all": "Alle",
+    "all_subregions": "Alle subregio's",
+    "clear_search": "Zoekopdracht wissen",
+    "completely_visited": "Volledig bezocht",
+    "country_list": "Landenlijst",
+    "no_countries_found": "Geen landen gevonden",
+    "not_visited": "Niet bezocht",
+    "num_countries": "landen gevonden",
+    "partially_visited": "Gedeeltelijk bezocht"
+  },
+  "settings": {
+    "account_settings": "Gebruikersaccountinstellingen",
+    "confirm_new_password": "Bevestig nieuw wachtwoord",
+    "current_email": "Huidige e-mail",
+    "email_change": "Wijzig e-mailadres",
+    "new_email": "Nieuwe e-mail",
+    "new_password": "Nieuw wachtwoord",
+    "no_email_set": "Geen e-mailadres ingesteld",
+    "password_change": "Wachtwoord wijzigen",
+    "settings_page": "Instellingenpagina",
+    "update": "Update",
+    "update_error": "Fout bij updaten van instellingen",
+    "update_success": "Instellingen succesvol bijgewerkt!"
+  }
 }
