--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -102,7 +102,54 @@
     "planned": "计划",
     "start_before_end_error": "开始日期必须早于结束日期",
     "visited": "访问过",
-    "wiki_image_error": "从维基百科获取图像时出错"
+    "wiki_image_error": "从维基百科获取图像时出错",
+    "actions": "行动",
+    "activity": "活动",
+    "activity_types": "活动类型",
+    "add": "添加",
+    "add_an_activity": "添加活动",
+    "add_notes": "添加注释",
+    "adventure_create_error": "未能创造冒险",
+    "adventure_created": "冒险已创造",
+    "adventure_update_error": "冒险更新失败",
+    "adventure_updated": "冒险已更新",
+    "basic_information": "基本信息",
+    "category": "类别",
+    "clear_map": "清晰的地图",
+    "copy_link": "复制链接",
+    "date_constrain": "限制收集日期",
+    "description": "描述",
+    "end_date": "结束日期",
+    "fetch_image": "获取图像",
+    "generate_desc": "生成描述",
+    "image": "图像",
+    "image_fetch_failed": "获取图像失败",
+    "link": "关联",
+    "location": "地点",
+    "location_information": "位置信息",
+    "my_images": "我的图片",
+    "my_visits": "我的访问",
+    "new_adventure": "新冒险",
+    "no_description_found": "没有找到描述",
+    "no_images": "没有图片",
+    "no_location": "请输入地点",
+    "no_results": "没有找到结果",
+    "no_start_date": "请输入开始日期",
+    "public_adventure": "公共冒险",
+    "remove": "消除",
+    "save_next": "节省",
+    "search_for_location": "搜索地点",
+    "search_results": "搜索结果",
+    "see_adventures": "查看冒险",
+    "select_adventure_category": "选择冒险类别",
+    "share_adventure": "分享这个冒险！",
+    "start_date": "开始日期",
+    "upload_image": "上传图片",
+    "upload_images_here": "在这里上传图片",
+    "url": "网址",
+    "warning": "警告",
+    "wiki_desc": "从维基百科文章中提取与冒险名称匹配的摘录。",
+    "wikipedia": "维基百科"
   },
   "home": {
     "desc_1": "轻松发现、规划和探索",
@@ -125,7 +172,6 @@
     "discord": "不和谐",
     "documentation": "文档",
     "greeting": "你好",
-    "login": "登录",
     "logout": "退出",
     "map": "地图",
     "my_activities": "我的活动",
@@ -134,7 +180,6 @@
     "search": "搜索",
     "settings": "设置",
     "shared_with_me": "与我分享",
-    "signup": "报名",
     "theme_selection": "主题选择",
     "themes": {
       "aestetic-dark": "审美黑暗",
@@ -154,7 +199,15 @@
     "login_error": "无法使用提供的凭据登录。",
     "password": "密码",
     "signup": "报名",
-    "username": "用户名"
+    "username": "用户名",
+    "confirm_password": "确认密码",
+    "email": "电子邮件",
+    "first_name": "名",
+    "last_name": "姓",
+    "registration_disabled": "目前已禁用注册。",
+    "profile_picture": "个人资料图片",
+    "public_profile": "公开资料",
+    "public_tooltip": "通过公开个人资料，用户可以与您共享收藏并在用户页面上查看您的个人资料。"
   },
   "worldtravel": {
     "all": "全部",
@@ -166,5 +219,22 @@
     "not_visited": "未访问过",
     "num_countries": "找到的国家",
     "partially_visited": "部分访问"
+  },
+  "users": {
+    "no_users_found": "未找到具有公开个人资料的用户。"
+  },
+  "settings": {
+    "account_settings": "用户帐户设置",
+    "confirm_new_password": "确认新密码",
+    "current_email": "当前电子邮件",
+    "email_change": "更改电子邮件",
+    "new_email": "新电子邮件",
+    "new_password": "新密码",
+    "no_email_set": "没有设置电子邮件",
+    "password_change": "更改密码",
+    "settings_page": "设置页面",
+    "update": "更新",
+    "update_error": "更新设置时出错",
+    "update_success": "设置更新成功！"
   }
 }
