--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -45,7 +45,111 @@
     "edit_adventure": "Modifier l'aventure",
     "no_image_found": "Aucune image trouvée",
     "open_details": "Ouvrir les détails",
-    "remove_from_collection": "Supprimer de la collection"
+    "remove_from_collection": "Supprimer de la collection",
+    "adventure": "Aventure",
+    "adventure_delete_success": "Aventure supprimée avec succès !",
+    "adventure_details": "Détails de l'aventure",
+    "adventure_type": "Type d'aventure",
+    "archive": "Archive",
+    "archived": "Archivé",
+    "archived_collection_message": "Collection archivée avec succès !",
+    "archived_collections": "Collections archivées",
+    "ascending": "Ascendant",
+    "cancel": "Annuler",
+    "category_filter": "Filtre de catégorie",
+    "clear": "Clair",
+    "close_filters": "Fermer les filtres",
+    "collection": "Collection",
+    "collection_adventures": "Inclure les aventures de collection",
+    "count_txt": "résultats correspondant à votre recherche",
+    "create_new": "Créer un nouveau...",
+    "date": "Date",
+    "dates": "Dates",
+    "delete_adventure": "Supprimer l'aventure",
+    "delete_collection": "Supprimer la collection",
+    "delete_collection_success": "Collection supprimée avec succès !",
+    "delete_collection_warning": "Etes-vous sûr de vouloir supprimer cette collection ? \nCela supprimera également toutes les aventures liées. \nCette action ne peut pas être annulée.",
+    "descending": "Descendant",
+    "duration": "Durée",
+    "edit_collection": "Modifier la collection",
+    "filter": "Filtre",
+    "homepage": "Page d'accueil",
+    "image_removed_error": "Erreur lors de la suppression de l'image",
+    "image_removed_success": "Image supprimée avec succès !",
+    "image_upload_error": "Erreur lors du téléchargement de l'image",
+    "image_upload_success": "Image téléchargée avec succès !",
+    "latitude": "Latitude",
+    "longitude": "Longitude",
+    "my_collections": "Mes collections",
+    "name": "Nom",
+    "no_image_url": "Aucune image trouvée à cette URL.",
+    "not_found": "Aventure introuvable",
+    "not_found_desc": "L'aventure que vous cherchiez est introuvable. \nVeuillez essayer une autre aventure ou revenez plus tard.",
+    "open_filters": "Ouvrir les filtres",
+    "order_by": "Commander par",
+    "order_direction": "Direction de la commande",
+    "planned": "Prévu",
+    "private": "Privé",
+    "public": "Publique",
+    "rating": "Notation",
+    "share": "Partager",
+    "sort": "Trier",
+    "sources": "Sources",
+    "start_before_end_error": "La date de début doit être antérieure à la date de fin",
+    "unarchive": "Désarchiver",
+    "unarchived_collection_message": "Collection désarchivée avec succès !",
+    "updated": "Mis à jour",
+    "visit": "Visite",
+    "visited": "Visité",
+    "visits": "Visites",
+    "wiki_image_error": "Erreur lors de la récupération de l'image depuis Wikipédia",
+    "actions": "Actes",
+    "activity": "Activité",
+    "activity_types": "Types d'activités",
+    "add": "Ajouter",
+    "add_an_activity": "Ajouter une activité",
+    "add_notes": "Ajouter des notes",
+    "adventure_create_error": "Échec de la création de l'aventure",
+    "adventure_created": "Aventure créée",
+    "adventure_update_error": "Échec de la mise à jour de l'aventure",
+    "adventure_updated": "Aventure mise à jour",
+    "basic_information": "Informations de base",
+    "category": "Catégorie",
+    "clear_map": "Effacer la carte",
+    "copy_link": "Copier le lien",
+    "date_constrain": "Contraindre aux dates de collecte",
+    "description": "Description",
+    "end_date": "Date de fin",
+    "fetch_image": "Récupérer une image",
+    "generate_desc": "Générer une description",
+    "image": "Image",
+    "image_fetch_failed": "Échec de la récupération de l'image",
+    "link": "Lien",
+    "location": "Emplacement",
+    "location_information": "Informations de localisation",
+    "my_images": "Mes images",
+    "my_visits": "Mes visites",
+    "new_adventure": "Nouvelle aventure",
+    "no_description_found": "Aucune description trouvée",
+    "no_images": "Aucune image",
+    "no_location": "Veuillez entrer un emplacement",
+    "no_results": "Aucun résultat trouvé",
+    "no_start_date": "Veuillez entrer une date de début",
+    "public_adventure": "Aventure publique",
+    "remove": "Retirer",
+    "save_next": "Sauvegarder",
+    "search_for_location": "Rechercher un emplacement",
+    "search_results": "Résultats de la recherche",
+    "see_adventures": "Voir les aventures",
+    "select_adventure_category": "Sélectionnez la catégorie d'aventure",
+    "share_adventure": "Partagez cette aventure !",
+    "start_date": "Date de début",
+    "upload_image": "Télécharger une image",
+    "upload_images_here": "Téléchargez des images ici",
+    "url": "URL",
+    "warning": "Avertissement",
+    "wiki_desc": "Extrait un extrait de l'article Wikipédia correspondant au nom de l'aventure.",
+    "wikipedia": "Wikipédia"
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
@@ -68,7 +172,6 @@
     "discord": "Discorde",
     "documentation": "Documentation",
     "greeting": "Salut",
-    "login": "Se connecter",
     "logout": "Déconnexion",
     "map": "Carte",
     "my_activities": "Mes activités",
@@ -77,14 +180,61 @@
     "search": "Recherche",
     "settings": "Paramètres",
     "shared_with_me": "Partagé avec moi",
-    "signup": "S'inscrire",
     "theme_selection": "Sélection de thèmes",
     "themes": {
       "forest": "Forêt",
       "light": "Lumière",
-      "night": "Nuit"
+      "night": "Nuit",
+      "aestetic-dark": "Esthétique sombre",
+      "aestetic-light": "Lumière esthétique",
+      "aqua": "Aqua",
+      "dark": "Sombre"
     },
     "users": "Utilisateurs",
     "worldtravel": "Voyage dans le monde"
+  },
+  "auth": {
+    "confirm_password": "Confirmez le mot de passe",
+    "email": "E-mail",
+    "first_name": "Prénom",
+    "forgot_password": "Mot de passe oublié ?",
+    "last_name": "Nom de famille",
+    "login": "Se connecter",
+    "login_error": "Impossible de se connecter avec les identifiants fournis.",
+    "password": "Mot de passe",
+    "registration_disabled": "L'inscription est actuellement désactivée.",
+    "signup": "S'inscrire",
+    "username": "Nom d'utilisateur",
+    "profile_picture": "Photo de profil",
+    "public_profile": "Profil public",
+    "public_tooltip": "Avec un profil public, les utilisateurs peuvent partager des collections avec vous et afficher votre profil sur la page des utilisateurs."
+  },
+  "users": {
+    "no_users_found": "Aucun utilisateur trouvé avec des profils publics."
+  },
+  "worldtravel": {
+    "all": "Tous",
+    "all_subregions": "Toutes les sous-régions",
+    "clear_search": "Effacer la recherche",
+    "completely_visited": "Entièrement visité",
+    "country_list": "Liste des pays",
+    "no_countries_found": "Aucun pays trouvé",
+    "not_visited": "Non visité",
+    "num_countries": "pays trouvés",
+    "partially_visited": "Partiellement visité"
+  },
+  "settings": {
+    "account_settings": "Paramètres du compte utilisateur",
+    "confirm_new_password": "Confirmer le nouveau mot de passe",
+    "current_email": "Courriel actuel",
+    "email_change": "Changer l'e-mail",
+    "new_email": "Nouvel e-mail",
+    "new_password": "Nouveau mot de passe",
+    "no_email_set": "Aucune adresse e-mail définie",
+    "password_change": "Changer le mot de passe",
+    "settings_page": "Page Paramètres",
+    "update": "Mise à jour",
+    "update_error": "Erreur lors de la mise à jour des paramètres",
+    "update_success": "Paramètres mis à jour avec succès !"
   }
 }
